--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html>
   <head>
-    <title>Brownie's website (Under development)</title>
+    <title>Brownie's website</title>
   </head>
   <body>
+    <h1>Under development</h1>
     <p>Not much to see here!</p>
   </body>
 </html>
