--- a/index.html
+++ b/index.html
@@ -52,29 +52,29 @@ https://www.tooplate.com/view/2126-antique-cafe
     <div id="menu" class="parallax-window" data-parallax="scroll" data-image-src="img/antique-cafe-bg-01.jpg">
         <div class="container mx-auto tm-container py-24 sm:py-48">
             <div class="text-center mb-16">
-                <h2 class="bg-white tm-text-brown py-6 px-12 text-4xl font-medium inline-block rounded-md">My projects</h2>
+                <h2 class="bg-white text-white py-6 px-12 text-4xl font-medium inline-block rounded-md bg-opacity-40">My projects</h2>
             </div>            
             <div class="flex flex-col lg:flex-row justify-around items-center">
-                <div class="flex-1 m-5 rounded-xl px-4 py-6 sm:px-8 sm:py-10 tm-bg-brown tm-item-container">
-                    <div class="flex items-start mb-6 tm-menu-item">
-                        <img src="img/menu-item-1.jpg" alt="Image" class="rounded-md">
-                            <div class="ml-3 sm:ml-6">
+                <div class="flex-1 m-5 rounded-xl px-4 py-6 sm:px-8 sm:py-10 tm-bg-brown tm-item-container flex flex-col">
+                    <div class="flex items-start mb-6 tm-menu-item flex-grow">
+                        <div class="ml-3 sm:ml-6">
                             <a id="gitlink" href="https://github.com/Bwownie/Brownie-inc-vrchat-osc" target="_blank">
                                 <h3 class="text-lg sm:text-xl mb-2 sm:mb-3 tm-text-yellow">Brownie inc OSC</h3>
                             </a>
-                            <div class="text-white text-md sm:text-lg font-light mb-1">Simple description here!</div>
+                            <div class="text-white text-md sm:text-lg font-light mb-1">Brownie inc OSC is a simple OSC tool i made for vrchat which allows you to set custom text in the custom text box whith elements such as afk time, local time, currently playing song and more. With brownie inc OSC you can also connect your SPS avatar to irl toys which an optional discord presence which can be toggled in the settings menu.</div>
+                            <div class="text-white text-md sm:text-lg font-light mb-1">Status: <span style="color: red;">Private, </span><span style="color: rgb(0, 184, 0);">in development</span></div>
                         </div>                    
                     </div>           
                 </div>
-                <div class="flex-1 m-5 rounded-xl px-4 py-6 sm:px-8 sm:py-10 tm-bg-brown tm-item-container">
-                    <div class="flex items-start justify-end mb-6 tm-menu-item-2">
-                        <div class="text-right mr-6">
-                            <a id="gitlink" href="https://github.com/Bwownie/Bwownie-bot" target="_blank">
+                <div class="flex-1 m-5 rounded-xl px-4 py-6 sm:px-8 sm:py-10 tm-bg-brown tm-item-container flex flex-col">
+                    <div class="flex items-start mb-6 tm-menu-item flex-grow">
+                        <div class="ml-3 sm:ml-6">
+                            <a id="gitlink" href="https://github.com/Bwownie/Bwownie-bot-public/tree/main" target="_blank">
                                 <h3 class="text-lg sm:text-xl mb-2 sm:mb-3 tm-text-yellow">Bwownie bot</h3>
                             </a>
-                        <div class="text-white text-md sm:text-lg font-light mb-1">Simple description here!</div>
-                        </div>
-                        <img src="img/project-img-2.jpg" alt="Image" class="rounded-md">                   
+                            <div class="text-white text-md sm:text-lg font-light mb-1">Bwownie bot is a simple discord bot that i started developing in my free time which i have been updating almost daily, the bot has its own custom economy with tons of fun commands and pets to collect. More features are planned and will be released soon.</div>
+                            <div class="text-white text-md sm:text-lg font-light mb-1">Status: <span style="color: red;">Private, closed source</span></div>
+                        </div>                
                     </div>
                 </div>
             </div>
