--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ https://www.tooplate.com/view/2126-antique-cafe
                             <a id="gitlink" href="https://github.com/Bwownie/Brownie-inc-vrchat-osc" target="_blank">
                                 <h3 class="text-lg sm:text-xl mb-2 sm:mb-3 tm-text-yellow">Brownie inc OSC</h3>
                             </a>
-                            <div class="text-white text-md sm:text-lg font-light mb-1">Brownie inc OSC is a simple OSC tool i made for vrchat which allows you to set custom text in the custom text box whith elements such as afk time, local time, currently playing song and more. With brownie inc OSC you can also connect your SPS avatar to irl toys which an optional discord presence which can be toggled in the settings menu.</div>
+                            <div class="text-white text-md sm:text-lg font-light mb-1">Brownie inc OSC is a simple OSC tool i made for vrchat which allows you to set custom text in the custom text box whith elements such as afk time, local time, currently playing song and more. With brownie inc OSC you can also connect your SPS avatar to irl toys with an optional discord presence which can be toggled in the settings menu.</div>
                             <div class="text-white text-md sm:text-lg font-light mb-1">Status: <span style="color: red;">Private, </span><span style="color: rgb(0, 184, 0);">in development</span></div>
                         </div>                    
                     </div>           
