--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ https://www.tooplate.com/view/2126-antique-cafe
         <div class="container mx-auto px-2 tm-intro-width">
             <div class="sm:pb-60 sm:pt-48 py-20">
                 <div class="bg-black bg-opacity-40 p-12 mb-5 text-center">
-                    <h1 class="text-white text-5xl tm-logo-font mb-5">Brownie inc</h1>
+                    <h1 class="text-white text-5xl tm-logo-font mb-5">Brownie</h1>
                     <p class="tm-text-gold tm-text-2xl">Incredibly autistic furry</p>
                 </div>    
                 <div class="bg-black bg-opacity-40 p-10 mb-5">
@@ -54,13 +54,13 @@ https://www.tooplate.com/view/2126-antique-cafe
                 <h2 class="bg-white text-white py-6 px-12 text-4xl font-medium inline-block rounded-md bg-opacity-40">My projects</h2>
             </div>            
             <div class="flex flex-col lg:flex-row justify-around items-center">
-                <div class="flex-1 m-5 rounded-xl px-4 py-6 sm:px-8 sm:py-10 tm-bg-brown tm-item-container flex flex-col">
+                <div class="flex-1 m-5 rounded-xl px-4 py-6 sm:px-8 sm:py-10 tm-bg-brown tm-item-container flex flex-col height">
                     <div class="flex items-start mb-6 tm-menu-item flex-grow">
                         <div class="ml-3 sm:ml-6">
                             <a id="gitlink" href="https://github.com/Bwownie/Brownie-inc-vrchat-osc" target="_blank">
-                                <h3 class="text-lg sm:text-xl mb-2 sm:mb-3 tm-text-yellow">Brownie inc OSC</h3>
+                                <h3 class="text-lg sm:text-xl mb-2 sm:mb-3 tm-text-yellow">Brownie OSC</h3>
                             </a>
-                            <div class="text-white text-md sm:text-lg font-light mb-1">Brownie inc OSC is a simple OSC tool i made for vrchat which allows you to set custom text in the custom text box whith elements such as afk time, local time, currently playing song and more. With brownie inc OSC you can also connect your SPS avatar to irl toys with an optional discord presence which can be toggled in the settings menu.</div>
+                            <div class="text-white text-md sm:text-lg font-light mb-1">Brownie OSC is a simple OSC tool i made for vrchat which allows you to set custom text in the custom text box whith elements such as afk time, local time, currently playing song and more. With brownie OSC you can also connect your SPS avatar to irl toys with an optional discord presence which can be toggled in the settings menu.</div>
                             <div class="text-white text-md sm:text-lg font-light mb-1">Status: <span style="color: red;">Private, </span><span style="color: rgb(0, 184, 0);">in development</span></div>
                         </div>                    
                     </div>           
